# payfi

./: .gitignore  Anchor.toml  CLOSE_DEPLOYMENTS.md  DELIVERABLES.txt  DEPLOY.md  DEVNET_DEPLOYMENT.md  DEVNET_TEST_RESULTS.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_CHECKLIST.md  README_NOIR.md  SECURITY_AUDIT_READINESS.md  SELF_AUDIT_GUIDE.md  TEST_REPORT_DEVNET.md  TEST_RESULTS.md  VISUAL_ENHANCEMENTS.md  package-lock.json  package.json
.github/workflows/: ci.yml  noir-ci.yml  test.yml
.next/dev/: tmp_file_io_benchmark_63b82a44ef5e31ca65a7c56a5bd33913
.next/dev/cache/: .rscinfo
app/frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vercel.json
app/frontend/app/: client-layout.tsx  layout.tsx  (+1 more)
docs/: FEATURE_COMPLETION.md  IMPLEMENTATION_CHECKLIST.md  PRODUCTION_ROADMAP.md  QUICK_START.md  WHATS_NEW.md
programs/payfi/: Cargo.toml
programs/verifier/: Cargo.toml
programs/verifier/src/: lib.rs
programs/verifier/tests/: integration_tests.rs
scripts/: deploy-devnet.sh  init_devnet.ts  sync-frontend-artifacts.js
tests/: devnet-smoke.ts  e2e_prover_verifier.test.ts  noir_proof.test.ts  payfi-simple.ts  payfi.ts  verifier.ts  verifier_proof.test.ts
web/prover/: package-lock.json  package.json  tsconfig.json
zk/noir/: BUILD_NOTES.md  Makefile  Nargo.toml  Prover.toml  README.md  generate_poseidon_vectors.js  input.example.json  input.poseidon.example.json  input.poseidon.unit.json  noirc  note_membership.nr  note_membership_poseidon.nr  pack_proof.js  poseidon_unit.nr  test_hash.nr
(+89 files in other folders)
