[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifier"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]
compute_budget = []

[dependencies]
anchor-lang = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"